force-app/main/default/objects/RFP__c/RFP__c.object-meta.xml
<CustomObject>
    <label>RFP</label>
    <nameField>
        <displayFormat>RFP-{0000}</displayFormat>
        <label>RFP_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>