force-app/main/default/objects/RFP__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP (Company)</relationshipLabel>
    <relationshipName>RFP1</relationshipName>
    <type>Lookup</type>
</CustomField>