force-app/main/default/objects/RFP__c/fields/Consulting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP</relationshipLabel>
    <relationshipName>RFP</relationshipName>
    <type>Lookup</type>
</CustomField>