force-app/main/default/objects/RFP__c/fields/FailedChunks__c.field-meta.xml
<CustomField>
    <fullName>FailedChunks__c</fullName>
    <label>FailedChunks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>