force-app/main/default/objects/RFP__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>