force-app/main/default/objects/RFP__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Type</label>
    <type>TextArea</type>
</CustomField>