force-app/main/default/objects/RFP__c/fields/IsBatchRunningForStrategicAiResponses__c.field-meta.xml
<CustomField>
    <fullName>IsBatchRunningForStrategicAiResponses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBatchRunningForStrategicAiResponses</label>
    <type>Checkbox</type>
</CustomField>