force-app/main/default/objects/RFP__c/fields/IsStrategicReviewCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsStrategicReviewCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStrategicReviewCompleted</label>
    <type>Checkbox</type>
</CustomField>