force-app/main/default/objects/RFP__c/fields/IsStrategicRFP__c.field-meta.xml
<CustomField>
    <fullName>IsStrategicRFP__c</fullName>
    <formula>Strategic_Questions_Count__c  &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsStrategicRFP</label>
    <type>Checkbox</type>
</CustomField>