force-app/main/default/objects/RFP__c/fields/Locked_At__c.field-meta.xml
<CustomField>
    <fullName>Locked_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Modal Locked At</label>
    <type>DateTime</type>
</CustomField>