force-app/main/default/objects/RFP__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Modal Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFP</relationshipName>
    <type>Lookup</type>
</CustomField>