force-app/main/default/objects/RFP__c/fields/Membership_Activity__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity__c</fullName>
    <label>Membership Activity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RFP</relationshipLabel>
    <relationshipName>RFP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>