force-app/main/default/objects/RFP__c/fields/No_Question_Number_Column__c.field-meta.xml
<CustomField>
    <fullName>No_Question_Number_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Question Number Column</label>
    <type>Checkbox</type>
</CustomField>