force-app/main/default/objects/RFP__c/fields/Primary_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP</relationshipLabel>
    <relationshipName>RFP</relationshipName>
    <type>Lookup</type>
</CustomField>