force-app/main/default/objects/RFP__c/fields/Sales_Season__c.field-meta.xml
<CustomField>
    <fullName>Sales_Season__c</fullName>
    <formula>Membership_Activity__r.Sales_Season1__c</formula>
    <label>Sales Season</label>
    <type>Text</type>
</CustomField>