force-app/main/default/objects/RFP__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Digitization In-Progress</fullName>
            </value>
            <value>
                <fullName>Digitization Successful</fullName>
            </value>
            <value>
                <fullName>Digitization Completed with Errors</fullName>
            </value>
            <value>
                <fullName>AI Review In-Progress</fullName>
                <label>AI Recommended Response Generation In-Progress</label>
            </value>
            <value>
                <fullName>AI Review Complete</fullName>
                <label>AI Recommended Response Generation Complete</label>
            </value>
            <value>
                <fullName>AI Review Completed with Errors</fullName>
                <label>AI Recommended Response Generation Completed with Errors</label>
            </value>
            <value>
                <fullName>AI Review Partially Complete(reprocessing)</fullName>
                <isActive>false</isActive>
                <label>AI Rec Response Generation Partially Complete(reprocessing)</label>
            </value>
            <value>
                <fullName>Digitization Partially Complete(reprocessing)</fullName>
                <isActive>false</isActive>
                <label>Digitization Partially Complete(reprocessing)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>