force-app/main/default/objects/RFP__c/fields/Strategic_Questions_Count__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Questions_Count__c</fullName>
    <label>Strategic Questions Count</label>
    <summaryFilterItems>
        <field>RFP_Question_And_Answer__c.IsStrategicQuestion__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>RFP_Question_And_Answer__c.RFP__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>