force-app/main/default/objects/RFP__c/fields/Strategic_Questions_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Questions_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategic Questions Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>