force-app/main/default/objects/RFP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Membership_Activity__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>IsStrategicRFP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Primary_Consultant__c</columns>
    <columns>Consulting_Firm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>